<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:background="#222222"
                android:gravity="center_horizontal"
                android:padding="10dip"
                android:text="@string/helpTitle" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:text="@string/helpIntro" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="2dip"
                android:background="#222222"
                android:gravity="center_horizontal"
                android:padding="2dip"
                android:text="@string/helpPlay" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:text="@string/helpPlay1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:text="@string/helpPlay2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:text="@string/helpPlay3" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:text="@string/helpPlay4" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="2dip"
                android:background="#222222"
                android:gravity="center_horizontal"
                android:padding="2dip"
                android:text="@string/helpGame" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:text="@string/helpGame1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:text="@string/helpGame2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:text="@string/helpGame3" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="2dip"
                android:background="#222222"
                android:gravity="center_horizontal"
                android:padding="2dip"
                android:text="(c) Michael Hodel" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>