<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:layout_span="4"
                android:layout_weight="3"
                android:background="#222222"
                android:gravity="center_horizontal|center_vertical"
                android:padding="10dip"
                android:text="@string/slTitle" />
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="6dip"
                android:text="@string/slStartupLevel" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLength="2"
                android:padding="6dip" />

            <ImageView
                android:id="@+id/levelup"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:layout_weight="1"
                android:src="@drawable/levup" />

            <ImageView
                android:id="@+id/leveldown"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="6dip"
                android:layout_weight="1"
                android:src="@drawable/levdown" />
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="2dip"
                android:layout_span="4"
                android:layout_weight="3"
                android:background="#222222"
                android:gravity="center_horizontal|center_vertical"
                android:padding="2dip"
                android:text="@string/slGameSettings" />
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="6dip"
                android:text="@string/slTurns" />

            <TextView
                android:id="@+id/turns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="6dip" />

            <ImageView
                android:id="@+id/turnsup"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:layout_weight="1"
                android:src="@drawable/levup" />

            <ImageView
                android:id="@+id/turnsdown"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="6dip"
                android:layout_weight="1"
                android:src="@drawable/levdown" />
        </TableRow>

        <TableRow >

            <CheckBox
                android:id="@+id/showTurns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/slShowTurns" />
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="2dip"
                android:layout_span="4"
                android:layout_weight="3"
                android:background="#222222"
                android:gravity="center_horizontal|center_vertical"
                android:padding="2dip"
                android:text="@string/slDisplaySettings" />
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="6dip"
                android:text="@string/slDelay" />

            <TextView
                android:id="@+id/delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="6dip" />

            <ImageView
                android:id="@+id/delayup"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:layout_weight="1"
                android:src="@drawable/levup" />

            <ImageView
                android:id="@+id/delaydown"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="6dip"
                android:layout_weight="1"
                android:src="@drawable/levdown" />
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="6dip"
                android:text="@string/slSteps" />

            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="6dip" />

            <ImageView
                android:id="@+id/stepsup"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:layout_weight="1"
                android:src="@drawable/levup" />

            <ImageView
                android:id="@+id/stepsdown"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="6dip"
                android:layout_weight="1"
                android:src="@drawable/levdown" />
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="6dip"
                android:text="@string/slSwings" />

            <TextView
                android:id="@+id/swings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="6dip" />

            <ImageView
                android:id="@+id/swingsup"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:layout_weight="1"
                android:src="@drawable/levup" />

            <ImageView
                android:id="@+id/swingsdown"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="6dip"
                android:layout_weight="1"
                android:src="@drawable/levdown" />
        </TableRow>

        <TableRow >

            <CheckBox
                android:id="@+id/showSwings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/slShowSwings" />
        </TableRow>
    </TableLayout>

</ScrollView>